test/files/neg/t8035-removed.check
t8035-removed.scala:4: error: adaptation of an empty argument list by inserting () has been removed
        signature: SetOps.apply(elem: A): Boolean
  given arguments: <none>
  List(1,2,3).toSet()
                   ^
t8035-removed.scala:7: error: adaptation of an empty argument list by inserting () has been removed
        signature: A(x: T): Foo.A[T]
  given arguments: <none>
  new A
  ^
t8035-removed.scala:11: error: adaptation of an empty argument list by inserting () has been removed
        signature: Format.format(x$1: Object): String
  given arguments: <none>
  sdf.format()
            ^
t8035-removed.scala:4: warning: a type was inferred to be `AnyVal`; this may indicate a programming error.
  List(1,2,3).toSet()
              ^
t8035-removed.scala:14: warning: adapted the argument list to the expected 2-tuple: add additional parens instead
        signature: List.::[B >: A](elem: B): List[B]
  given arguments: 42, 27
 after adaptation: List.::((42, 27): (Int, Int)) [quickfixable]
  Nil.::(42, 27)      // yeswarn
        ^
2 warnings
3 errors
